--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,9 +30,9 @@ body {
 div.swiper-button-prev,
 div.swiper-button-next {
 color: lime;
-padding: 35px;
-border-radius: 35px;
-transform: scale(.5);
+padding: 50px;
+border-radius: 50%;
+transform: scale(.3);
 outline: auto;
 }
 
