--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,3 +65,20 @@ div.swiper-button-next:hover {
   color: grey !important;
 
 }
+
+
+/* .StripeElement {
+  background-color: white;
+  padding: 8px 12px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+  }
+   */
+
+   .MuiOutlinedInput-input{ 
+    padding-top: 0px !important;
+    padding-top: 10px !important;
+  }
