--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,7 +66,11 @@ div.swiper-button-next:hover {
 
 }
 
+.carousel-indicators button{
+background-color: #056835 !important;
 
+
+}
 /* .StripeElement {
   background-color: white;
   padding: 8px 12px;
